@@ -87,24 +87,24 @@ Options should be passed in the editor's constructor.
 {% endhighlight %}
 
 
-**toolbar** *String* Defaults to all the built in buttons/commands
+**toolbar** *String* Defaults to all the built in buttons/commands  
 A comma separated list of commands. To separate into groups, use the bar character (|) instead of a comma.
 e.g.: "bold,italic,underline|source"
 
 
-**style** *String* Defaults to "jquery.sceditor.default.css"
+**style** *String* Defaults to "jquery.sceditor.default.css"  
 URL of the WYSIWYG editors stylesheet. This is the style sheet that will style all the HTML inside the WYSIWYG editor.
 
 
-**fonts** *String* Defaults to "Arial,Arial Black,Comic Sans MS,Courier New,Georgia,Impact,Sans-serif,Serif,Times New Roman,Trebuchet MS,Verdana"
+**fonts** *String* Defaults to "Arial,Arial Black,Comic Sans MS,Courier New,Georgia,Impact,Sans-serif,Serif,Times New Roman,Trebuchet MS,Verdana"  
 Should be a comma separated list of fonts for the font selector.
 
 
-**colors** *String* Defaults to null
+**colors** *String* Defaults to null  
 Colors should be comma separated list of hex colours with bar (|) characters to signal a new column. If set to null the colours will be auto generated.
 
 
-**locale** *String* Defaults to "en"
+**locale** *String* Defaults to "en"  
 The locale to use, e.g.: en, en-US, fr, ect. The language file for the locale *must* be included before the editor is used and after the editors main JS file. e.g.
 
 {% highlight html %}
@@ -113,21 +113,21 @@ The locale to use, e.g.: en, en-US, fr, ect. The language file for the locale *m
 <!-- setup the editor here -->
 {% endhighlight %}
 
-**charset** *String* Defaults to "utf-8"
+**charset** *String* Defaults to "utf-8"  
 The charset to set the WYSIWYG editor to.
 
 
-**emoticonsCompat** *Bool* Defaults to false
+**emoticonsCompat** *Bool* Defaults to false  
 If compatibility is enabled it will require emoticons to be surrounded by whitespace or EOL characters meaning if you have :/ it will not be replaced in http://.
 
 This mode currently has limited As You Type emoticon conversion support. EOL (end of line chars) are not recognised as whitespace with AYT conversion so only emoticons surrounded by whitespace will be converted. This dose not affect non-AYT conversion which will still work as normal.
 
 
-**emoticonsRoot** *String* Defaults to empty string
+**emoticonsRoot** *String* Defaults to empty string  
 Root URL of emoticons, will be pre-pended to all emoticon URLs.
 
 
-**emoticons** *Object*
+**emoticons** *Object*  
 Map in the following format:
 
 {% highlight javascript %}
@@ -151,102 +151,105 @@ emoticons:
 {% endhighlight %}
 
 
-**width** *String or int* Defaults to null
+**width** *String or int* Defaults to null  
 Width of the editor. Can be either an int px value or a %. If set to null the width will be set to that of the textarea it is replacing.
 
 
-**height** *String or int* Defaults to null
+**height** *String or int* Defaults to null  
 Height of the editor. Can be either an int px value or a %. If set to null the height will be set to that of the textarea it is replacing.
 
 
-**resizeEnabled** *Bool* Defaults to true
+**resizeEnabled** *Bool* Defaults to true  
 If to allow the editor to be resized. If set to true, a small grip will be added to the bottom right-hand corner of the editor which allows it to be resized.
 
 
-**resizeMinWidth** *int* Defaults to null
+**resizeMinWidth** *int* Defaults to null  
 Minimum width that the editor can be resized to. Set to null for half textarea width or -1 for unlimited.
 
 
-**resizeMinHeight** *int* Defaults to null
+**resizeMinHeight** *int* Defaults to null  
 Minimum height that the editor can be resized. Set to null for half textarea height or -1 for unlimited
 
 
-**resizeMaxHeight** *int* Defaults to null
+**resizeMaxHeight** *int* Defaults to null  
 Maximum height the editor can be resized to. Set to null for double textarea height or -1 for unlimited
 
 
-**resizeMaxWidth** *int* Defaults to null
+**resizeMaxWidth** *int* Defaults to null  
 Maximum width the editor can be resized to. Set to null for double textarea width or -1 for unlimited
 
 
-**resizeHeight** *Bool* Defaults to true
+**resizeHeight** *Bool* Defaults to true  
 If resizing by height is enabled
 
 
-**resizeWidth** *Bool* Defaults to true
+**resizeWidth** *Bool* Defaults to true  
 If resizing by width is enabled
 
 
-**getHtmlHandler** *function*
+**getHtmlHandler** *function*  
 This is called to filter the HTML before being shown in View Source or set as the textareas value. The function should take two arguments, the first being a string containing the HTML and the second being the WYSIWYG editors DOM body node.
 
 
-**getTextHandler** *function*
+**getTextHandler** *function*  
 This function will be called when switching from View Source mode back to WYSIWYG mode, or when loading the value from the textarea. The function should 1 argument, a string containing the content from the textarea and return HTML.
 
 
-**dateFormat** *String* Defaults to "year-month-day"
-Date format, will be overridden if locale specifies one.
-he words year, month and day will be replaced with the users current year, month and day.
+**dateFormat** *String* Defaults to "year-month-day"  
+Date format, will be overridden if locale specifies one. The words year, month and day will be replaced with the users current year, month and day.
 
 
-**toolbarContainer** *HTMLElement* Defaults to null
+**toolbarContainer** *HTMLElement* Defaults to null  
 HTML node to insert the toolbar into.
 
 
-**enablePasteFiltering** *Bool* Defaults to false
+**enablePasteFiltering** *Bool* Defaults to false  
 If to enable paste filtering. This is **currently experimental**, please report any issues.
 
 
-**readOnly** *Bool* Defaults to false
+**disablePasting** *Bool* Defaults to false  
+If to completely disable user pasting into the editor.
+
+
+**readOnly** *Bool* Defaults to false  
 If the editor is read only.
 
 
-**rtl** *Bool* Defaults to false
+**rtl** *Bool* Defaults to false  
 If to set the editor to right-to-left mode.
 
 
-**autofocus** *Bool* Defaults to false
+**autofocus** *Bool* Defaults to false  
 If to auto focus the editor on page load.
 
 
-**autoExpand** *Bool* Defaults to false
+**autoExpand** *Bool* Defaults to false  
 If to auto expand the editor to fit the content
 
 
-**autoUpdate** *Bool* Defaults to false
+**autoUpdate** *Bool* Defaults to false  
 If to auto update original textbox on blur
 
 
-**runWithoutWysiwygSupport** *Bool* Defaults to false
+**runWithoutWysiwygSupport** *Bool* Defaults to false  
 If to run the source editor when there is no browser WYSIWYG support. Only really applies to mobile OS's as all modern desktop browsers support WYSIWYG.
 
 
-**id** *String* Defaults to null
+**id** *String* Defaults to null  
 ID to assign the editor.
 
 
-**plugins** *String* Defaults to empty string
+**plugins** *String* Defaults to empty string  
 A commas seperated list of plugins.
 
 
-**parserOptions** *Object* Defaults to an empty object
+**parserOptions** *Object* Defaults to an empty object  
 BBCode parser options, only applies if using the editor in BBCode mode.
 
 See $.sceditor.BBCodeParser.defaults for list of valid options
 
 
-**dropDownCss** *Object* Defaults to an empty object
+**dropDownCss** *Object* Defaults to an empty object  
 Extra CSS to add to the dropdown menu (e.g. z-index).
 
 
@@ -279,7 +282,7 @@ $.sceditor.command.set() takes two arguments, name and cmd.
 
 #### Command object properties:
 
-**exec** *String or function*
+**exec** *String or function*  
 Executed when the command is click in WYSIWYG mode.
 
 Should be either a string which will be passed to the browsers execCommand function.
@@ -297,11 +300,11 @@ function () {
 {% endhighlight %}
 
 
-**errorMessage** *String*
+**errorMessage** *String*  
 Error message to show if the exec string fails.
 
 
-**txtExec** *String or array*
+**txtExec** *String or array*  
 Should be either an array containing 1 or 2 strings or a function.
 
 If it is an array and has two strings then any selected content will be surrounded with both strings and the cursor placed before the last string. If it has only 1 string then any selected content will be replaced and the cursor placed after the inserted string.
@@ -319,15 +322,15 @@ txtExec: function () {
 {% endhighlight %}
 
 
-**keyPress** *Function*
+**keyPress** *Function*  
 Function that will be called each time a key is pressed when in WYSIWYG mode.
 
 
-**tooltip** *String*
+**tooltip** *String*  
 Tooltip to show when the mouse hovers over the commands button.
 
 
-**forceNewLineAfter** *Array*
+**forceNewLineAfter** *Array*  
 Array containing any tags to force a new line after. If certian tags like &lt;code> and &lt;blockquote> are the last child of the editor, you can't enter any text after them. To solve this you can add them to this array which will cause a new line to be force after them allowing text to be entered.
 
 
@@ -363,6 +366,7 @@ $.sceditorBBCodePlugin.bbcode.set() takes two arguments, name and bbcode.
 	allowsEmpty: false,
 	excludeClosing: false,
 	skipLastLineBreak: false,
+	quoteType: $.sceditor.BBCodeParser.QuoteType.auto,
 
 	breakBefore: false,
 	breakStart: false,
@@ -376,7 +380,7 @@ $.sceditorBBCodePlugin.bbcode.set() takes two arguments, name and bbcode.
 
 #### BBCode object properties
 
-**styles** *object* Defaults to null
+**styles** *object* Defaults to null  
 The **format** function or string will be used for all matching tags with the specified style.
 
 To match all occurrences of a style do:
@@ -392,7 +396,7 @@ To match all occurrences of a style do with a specific value do:
 {% endhighlight %}
 
 
-**tags** *object* Defaults to null
+**tags** *object* Defaults to null  
 The **format** function or string will be used for all matching tags.
 
 To match all occurrences of a tag do:
@@ -418,58 +422,72 @@ for all occurrences of a tag with a specific attribute with a specific value:
 {% endhighlight %}
 
 
-**isSelfClosing** *Bool* Defaults to false
+**isSelfClosing** *Bool* Defaults to false  
 If this tag is a self closing tag (has no closing tag like `[hr]`).
 
 
-**isInline** *Bool* Defaults to true
+**isInline** *Bool* Defaults to true  
 If this BBCode is inline or block level.
 
 
-**isHtmlInline** *Bool or undefined* Defaults to undefined
+**isHtmlInline** *Bool or undefined* Defaults to undefined  
 If this BBCodes HTML is inline or not. Only needs to be set if it differs from the BBCode (isInline). If undefined it is ignored and isInline is used.
 
 
-**allowedChildren** *Array or null* Defaults to null (all children)
+**allowedChildren** *Array or null* Defaults to null (all children)  
 If null/undefined then all children will be allowed. If it's an array only the tags specified will be allowed. To allow plain text use `#` as the tag.
 
-To only allow plain text it would be:
+To only allow plain text it would be:  
 `allowedChildren: [#]`
 
-to only allow list items it would be:
+to only allow list items it would be:  
 `allowedChildren: ['*', 'li']`
 
 
-**allowsEmpty** *Bool* Defaults to false
+**allowsEmpty** *Bool* Defaults to false  
 If this tag is allowed to be empty (have no children or content).
 
 
-**excludeClosing** *Bool* Defaults to false
+**excludeClosing** *Bool* Defaults to false  
 If to not add a closing tag. Mostly so that [*] can be used without [/*].
 
 
-**skipLastLineBreak** *Bool*
+**skipLastLineBreak** *Bool*  
 All block level tags have an extra &lt;br /> added to the end of them in all browsers except IE. If this is set to true the extra line break will not be added.
 
 
-**breakBefore** *Bool* Defaults to false
+**quoteType** *$.sceditor.BBCodeParser.QuoteType* Defaults to auto
+The quote type for attributes. Valid valus are:
+
+$.sceditor.BBCodeParser.QuoteType.auto,  
+Quote the attributes value when it has a space or equals sign in it  
+$.sceditor.BBCodeParser.QuoteType.never,  
+Never quote the attributes value  
+$.sceditor.BBCodeParser.QuoteType.always  
+Always quote the attributes value 
+
+or a function which takes 1 argument (the attributes value) and returns the value with the right quotes.
+
+
+**breakBefore** *Bool* Defaults to false  
 If to always insert a new line before the tag.
 
 
-**breakStart** *Bool* Defaults to false
+**breakStart** *Bool* Defaults to false  
 If to always insert a new line after the start tag. This does not apply to self closing tags.
 
 
-**breakEnd** *Bool* Defaults to false
+**breakEnd** *Bool* Defaults to false  
 If to always insert a new line before the end tag. This does not apply to self closing tags.
 
 
-**breakAfter** *Bool* Defaults to false
+**breakAfter** *Bool* Defaults to false  
 If to always insert a new line after the end tag.
 
 
-**format** *String or function*
-Should be either a string like `"[b]{0}[/b]"` where {0} will be replaced with the BBCode tags content.
+**format** *String or function*  
+Should be either a string like `"[b]{0}[/b]"` where {0} will be replaced with the BBCode tags content.  
+*Note:* If it's a self closing tag if should exclude the end tag, e.g. `"[*]{0}"`
 
 Or a function which returns the formatted BBCode string. It should take two parameters, `element` and `content`.
 
@@ -488,7 +506,7 @@ function(element, content) {
 {% endhighlight %}
 
 
-**html** *String or function*
+**html** *String or function*  
 Should be either a string like `"<div style="direction: ltr">{0}</div>"` where {0} will be replaced with the HTML tags content.
 
 Or a function taking 3 arguments (token, attrs, content) and returning the HTML string.
